--- a/s5sass/css/style.css
+++ b/s5sass/css/style.css
@@ -1,93 +1,451 @@
-.container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  border: 2px solid black;
-  height: 100%vh;
-  width: 100%vw;
-}
-
-div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  width: 100px;
-  height: 100px;
-  background-color: black;
-}
-
-@media only screen and (min-width: 768px) {
-  div {
-    border-radius: 100%;
+/*
+primario: peru
+secundario: slategray
+error: tomato
+aviso: orange
+*/
+.bg-primario {
+    background-color: navy;
+  }
+  
+  .text-color-primario {
+    color: navy;
+  }
+  
+  .message-box-primario {
+    border: 1px solid navy;
+    border-radius: .5rem;
+    -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+            box-shadow: 3px 3px 5px 5px #dadada;
+    padding: 1rem;
+  }
+  
+  .bg-secundario {
+    background-color: green;
+  }
+  
+  .text-color-secundario {
+    color: green;
+  }
+  
+  .message-box-secundario {
+    border: 1px solid green;
+    border-radius: .5rem;
+    -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+            box-shadow: 3px 3px 5px 5px #dadada;
+    padding: 1rem;
+  }
+  
+  .bg-error {
     background-color: red;
   }
-}
-
-@media only screen and (min-width: 1366px) {
-  div {
-    width: 300px;
-    height: 100px;
-    background-color: blue;
-    border-radius: 0;
+  
+  .text-color-error {
+    color: red;
   }
+  
+  .message-box-error {
+    border: 1px solid red;
+    border-radius: .5rem;
+    -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+            box-shadow: 3px 3px 5px 5px #dadada;
+    padding: 1rem;
+  }
+  
+  .bg-aviso {
+    background-color: yellow;
+  }
+  
+  .text-color-aviso {
+    color: yellow;
+  }
+  
+  .message-box-aviso {
+    border: 1px solid yellow;
+    border-radius: .5rem;
+    -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+            box-shadow: 3px 3px 5px 5px #dadada;
+    padding: 1rem;
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  
+  body {
+    padding-top: 80px;
+  }
+  
+  nav {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    background-color: #ddd;
+    height: 70px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  
+  nav ul {
+    list-style: none;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  
+  nav ul li {
+    padding: .5rem 1rem;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+  }
+  
+  nav ul li a {
+    color: unset;
+    text-decoration: none;
+  }
+  
+  nav ul li:hover {
+    color: white;
+    background-color: #333;
+  }
+  
+  .d-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  
+  .flex-column {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  
+  .card-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 1rem;
+  }
+  
+  .card {
+    border: 1px solid #333;
+    border-radius: .5rem;
+    -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+            box-shadow: 3px 3px 5px 5px #dadada;
+    padding: 1rem;
+    margin: 0 1rem 1rem 1rem;
+  }
+  
+  .card img {
+    width: 50%;
+    margin: 0 auto;
+    border-radius: 100%;
+  }
+  
+  .card .card-body h2 {
+    font-size: 2rem;
+    font-family: 'Courier New', Courier, monospace;
+  }
+  
+  .card .card-body p {
+    font-size: 1rem;
+  }
+  
+  .post {
+    border: 1px solid #333;
+    border-radius: .5rem;
+    -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+            box-shadow: 3px 3px 5px 5px #dadada;
+    padding: 1rem;
+  }
+  
+  .post img {
+    width: 50px;
+    border-radius: 100%;
+  }
+  
+  .post p {
+    font-family: 'Courier New', Courier, monospace;
+  }
+  
+  .post-detail {
+    border: 1px solid #333;
+    border-radius: .5rem;
+    -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+            box-shadow: 3px 3px 5px 5px #dadada;
+    padding: 1rem;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    .card-wrapper {
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+    }
+    .card {
+      width: calc( 50% - 2rem);
+    }
+  }
+  
+  @media only screen and (min-width: 992px) {
+    .card-wrapper {
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+    }
+  }
+  
+  /*
+   mobile 0 < 768
+   tablet 768 < 992
+   desktop > 992
+   */
+  /*# sourceMappingURL=style.css.map *//*
+primario: peru
+secundario: slategray
+error: tomato
+aviso: orange
+*/
+.bg-primario {
+  background-color: navy;
 }
 
-section {
+.text-color-primario {
+  color: navy;
+}
+
+.message-box-primario {
+  border: 1px solid navy;
+  border-radius: .5rem;
+  -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+          box-shadow: 3px 3px 5px 5px #dadada;
+  padding: 1rem;
+}
+
+.bg-secundario {
+  background-color: green;
+}
+
+.text-color-secundario {
+  color: green;
+}
+
+.message-box-secundario {
+  border: 1px solid green;
+  border-radius: .5rem;
+  -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+          box-shadow: 3px 3px 5px 5px #dadada;
+  padding: 1rem;
+}
+
+.bg-error {
+  background-color: red;
+}
+
+.text-color-error {
+  color: red;
+}
+
+.message-box-error {
+  border: 1px solid red;
+  border-radius: .5rem;
+  -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+          box-shadow: 3px 3px 5px 5px #dadada;
+  padding: 1rem;
+}
+
+.bg-aviso {
+  background-color: yellow;
+}
+
+.text-color-aviso {
+  color: yellow;
+}
+
+.message-box-aviso {
+  border: 1px solid yellow;
+  border-radius: .5rem;
+  -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+          box-shadow: 3px 3px 5px 5px #dadada;
+  padding: 1rem;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  padding-top: 80px;
+}
+
+nav {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background-color: #ddd;
+  height: 70px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav ul li {
+  padding: .5rem 1rem;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+nav ul li a {
+  color: unset;
+  text-decoration: none;
+}
+
+nav ul li:hover {
+  color: white;
+  background-color: #333;
+}
+
+.d-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.flex-column {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 30px;
+}
+
+.card-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
-  padding: 2rem 2rem 2rem 2rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1rem;
+}
+
+.card {
+  border: 1px solid #333;
+  border-radius: .5rem;
+  -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+          box-shadow: 3px 3px 5px 5px #dadada;
+  padding: 1rem;
+  margin: 0 1rem 1rem 1rem;
+}
+
+.card img {
+  width: 50%;
+  margin: 0 auto;
+  border-radius: 100%;
+}
+
+.card .card-body h2 {
+  font-size: 2rem;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.card .card-body p {
+  font-size: 1rem;
+}
+
+.post {
+  border: 1px solid #333;
+  border-radius: .5rem;
+  -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+          box-shadow: 3px 3px 5px 5px #dadada;
+  padding: 1rem;
+}
+
+.post img {
+  width: 50px;
+  border-radius: 100%;
+}
+
+.post p {
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.post-detail {
+  border: 1px solid #333;
+  border-radius: .5rem;
+  -webkit-box-shadow: 3px 3px 5px 5px #dadada;
+          box-shadow: 3px 3px 5px 5px #dadada;
+  padding: 1rem;
 }
 
 @media only screen and (min-width: 768px) {
-  section {
+  .card-wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+  }
+  .card {
+    width: calc( 50% - 2rem);
   }
 }
 
-@media only screen and (min-width: 1366px) {
-  section {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  section .img {
-    width: 15%;
-    height: auto;
+@media only screen and (min-width: 992px) {
+  .card-wrapper {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 }
 
-.img {
-  width: 30%;
-  height: auto;
-  padding: 2rem;
-}
+/*
+ mobile 0 < 768
+ tablet 768 < 992
+ desktop > 992
+ */
 /*# sourceMappingURL=style.css.map */
