--- a/s5sass/css/style.scss
+++ b/s5sass/css/style.scss
@@ -1,72 +1,144 @@
-.container{
-    display:flex;
-    flex-direction: row;
-    border: 2px solid black;
-    height: 100%vh;
-    width: 100%vw;
+/*
+primario: peru
+secundario: slategray
+error: tomato
+aviso: orange
+*/
+@mixin custom-wrapper($border-color){
+    border: 1px solid $border-color;
+    border-radius: .5rem;
+    box-shadow: 3px 3px 5px 5px #dadada;
+    padding: 1rem;
 }
 
-div{
-    display: flex;
-    flex-direction: row;
-    width: 100px;
-    height: 100px;
-    background-color: black;
+$colors:(
+    "primario":navy,
+    "secundario": green,
+    "error": red,
+    "aviso": yellow
+);
 
-}
+@each $type, $color in $colors {
+    .bg-#{$type}{
+        background-color: $color;
+    }
 
+    .text-color-#{$type}{
+        color:$color;  
+    }
 
-@media only screen and (min-width: 768px)
-{
-    div{
-        border-radius: 100%;
-        background-color: red;
+    .message-box-#{$type}{
+        @include custom-wrapper($color);
     }
 }
 
-@media only screen and (min-width: 1366px)
-{
-    div{
-        width: 300px;
-        height: 100px;
-        background-color: blue;
-        border-radius: 0;
-    }
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 30px;
+body{
+    padding-top: 80px;
+}
+
+nav{
     width: 100%;
-    padding: 2rem 2rem 2rem 2rem;
-}
-@media only screen and (min-width: 768px)
-{
-    section{
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        
-    }
-}
-
-@media only screen and (min-width: 1366px)
-{
-    section{
-        flex-direction: row;
-        flex-wrap: wrap;
-        .img{
-            width: 15%;
-            height: auto;
+    position: fixed;
+    top: 0;
+    background-color:#ddd;
+    height: 70px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    ul{
+        list-style: none;
+        padding: 0;
+        display: flex;
+        li{
+            padding: .5rem 1rem;
+            transition: all 1s ease;
+            a{
+                color: unset;
+                text-decoration: none;
+            }
+            &:hover{
+                color: white;
+                background-color: #333;
+            }
         }
     }
 }
 
-.img{
-    width: 30%;
-    height: auto;
-    padding: 2rem;
-
+.d-flex{
+    display: flex;
 }
+
+.flex-column{
+    flex-direction: column;
+}
+
+.card-wrapper{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    flex-direction: column;
+    padding: 1rem;
+}
+.card{
+    @include custom-wrapper(#333);
+    margin:0 1rem 1rem 1rem;
+    img{
+        width: 50%;
+        margin:0 auto;
+        border-radius: 100%;
+    }
+    .card-body{
+        h2{
+            font-size: 2rem;
+            font-family: 'Courier New', Courier, monospace;
+        }
+        p{
+            font-size: 1rem;
+        }
+    }
+}
+
+.post{
+    @include custom-wrapper(#333);
+    img{
+        width: 50px;
+        border-radius: 100%;
+    }
+    p{
+        font-family: 'Courier New', Courier, monospace;
+    }
+}
+
+.post-detail{
+    @include custom-wrapper(#333)
+}
+
+@media only screen and ( min-width: 768px ) {
+    .card-wrapper{
+        flex-wrap: wrap;
+        flex-direction:row;
+    }
+    .card{
+        width:calc( 50% - 2rem)
+    }
+}
+
+@media only screen and ( min-width: 992px ){
+    .card-wrapper{
+        flex-wrap: nowrap;
+    }
+}
+
+/*
+ mobile 0 < 768
+ tablet 768 < 992
+ desktop > 992
+ */
